[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://src/UI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/frame.png" type="Texture" id=4]
[ext_resource path="res://src/UI/SanityBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Default (64px)/sword.png" type="Texture" id=6]
[ext_resource path="res://src/UI/Tooltip/Tooltip.tscn" type="PackedScene" id=7]

[sub_resource type="AnimationNodeTransition" id=1]
input_count = 2
input_0/name = "Idle"
input_0/auto_advance = false
input_1/name = "Attack"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=2]
graph_offset = Vector2( -340.141, 102.72 )
nodes/Transition/node = SubResource( 1 )
nodes/Transition/position = Vector2( 340, 140 )
nodes/output/position = Vector2( 560, 140 )
node_connections = [ "output", 0, "Transition" ]

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_top = 152.0
margin_bottom = 168.0

[node name="Health" type="Label" parent="."]
margin_left = -32.0
margin_top = 152.0
margin_right = 32.0
margin_bottom = 173.0
text = "0/0"
align = 1
valign = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="Selected" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="Effects" type="GridContainer" parent="."]
margin_left = -128.0
margin_top = 176.0
margin_right = 128.0
margin_bottom = 216.0

[node name="SanityBar" parent="." instance=ExtResource( 5 )]
margin_left = -128.0
margin_top = -160.0
margin_bottom = -146.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
parameters/Transition/current = 0

[node name="Intent" type="TextureRect" parent="."]
margin_left = -24.0
margin_top = -200.0
margin_right = 8.0
margin_bottom = -168.0
texture = ExtResource( 6 )
expand = true

[node name="Amount" type="Label" parent="Intent"]
margin_left = 32.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 29.0
text = "0"

[node name="Name" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -128.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 149.0
align = 1
valign = 1

[node name="Tooltip" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
